--- a/style.sass
+++ b/style.sass
@@ -280,16 +280,9 @@ form
   box-shadow: none
 
 #mediamilitia
- background: $concrete
- border-bottom: solid 2px darken($concrete, 20)
- box-shadow: 0px -2px 0px darken($concrete, 20) inset
- &:active
-  box-shadow: none
-
-#mediamilitia
- background: $concrete
- border-bottom: solid 2px darken($concrete, 20)
- box-shadow: 0px -2px 0px darken($concrete, 20) inset
+ background: $asbestos
+ border-bottom: solid 2px darken($asbestos, 20)
+ box-shadow: 0px -2px 0px darken($asbestos, 20) inset
  &:active
   box-shadow: none
 
@@ -304,5 +297,19 @@ form
  background: $vervoer
  border-bottom: solid 2px darken($vervoer, 20)
  box-shadow: 0px -2px 0px darken($vervoer, 20) inset
+ &:active
+  box-shadow: none
+
+#github
+ background: $asbestos
+ border-bottom: solid 2px darken($asbestos, 20)
+ box-shadow: 0px -2px 0px darken($asbestos, 20) inset
+ &:active
+  box-shadow: none
+
+#transip
+ background: $belizehole
+ border-bottom: solid 2px darken($belizehole, 20)
+ box-shadow: 0px -2px 0px darken($belizehole, 20) inset
  &:active
   box-shadow: none
