--- a/tools.jade
+++ b/tools.jade
@@ -50,6 +50,8 @@ html
    +linkbtn("paypal", "https://www.paypal.com/signin?country.x=NL&locale.x=nl_NL", "paypal")
    +linkbtn("rabobank", "https://bankieren.rabobank.nl/klanten/", "money")
    +linkbtn("dumpert", "http://www.dumpert.nl/", "smile-o")
+   +linkbtn("github", "https://github.com/", "github")
+   +linkbtn("transip", "https://www.transip.nl/cp/", "server")
    
   section
    h1 Avans
@@ -58,7 +60,7 @@ html
    +linkbtn("vervoer", "https://9292.nl/", "bus")
    +linkbtn("blackboard", "http://bb.avans.nl", "graduation-cap")
    +linkbtn("mail", "https://mail.google.com/mail/u/1/#inbox", "envelope")
-    
+   
   section
    h1 Design
    +linkbtn("shake", "https://web.shakelaw.com/folders", "book")
