--- a/style.css
+++ b/style.css
@@ -308,19 +308,9 @@ form button.searchbtn {
 }
 
 #mediamilitia {
-  background: #95a5a6;
-  border-bottom: solid 2px #617374;
-  box-shadow: 0px -2px 0px #617374 inset;
-}
-
-#mediamilitia:active {
-  box-shadow: none;
-}
-
-#mediamilitia {
-  background: #95a5a6;
-  border-bottom: solid 2px #617374;
-  box-shadow: 0px -2px 0px #617374 inset;
+  background: #7f8c8d;
+  border-bottom: solid 2px #4e5758;
+  box-shadow: 0px -2px 0px #4e5758 inset;
 }
 
 #mediamilitia:active {
@@ -344,5 +334,25 @@ form button.searchbtn {
 }
 
 #vervoer:active {
+  box-shadow: none;
+}
+
+#github {
+  background: #7f8c8d;
+  border-bottom: solid 2px #4e5758;
+  box-shadow: 0px -2px 0px #4e5758 inset;
+}
+
+#github:active {
+  box-shadow: none;
+}
+
+#transip {
+  background: #2980b9;
+  border-bottom: solid 2px #164666;
+  box-shadow: 0px -2px 0px #164666 inset;
+}
+
+#transip:active {
   box-shadow: none;
 }
