--- a/style.sass
+++ b/style.sass
@@ -313,3 +313,31 @@ form
  box-shadow: 0px -2px 0px darken($belizehole, 20) inset
  &:active
   box-shadow: none
+
+#travian_kingdoms
+ background: $sunflower
+ border-bottom: solid 2px darken($sunflower, 20)
+ box-shadow: 0px -2px 0px darken($sunflower, 20) inset
+ &:active
+  box-shadow: none
+
+#drawio
+ background: $orange
+ border-bottom: solid 2px darken($orange, 20)
+ box-shadow: 0px -2px 0px darken($orange, 20) inset
+ &:active
+  box-shadow: none
+
+#duolingo
+ background: $peterriver
+ border-bottom: solid 2px darken($peterriver, 20)
+ box-shadow: 0px -2px 0px darken($peterriver, 20) inset
+ &:active
+  box-shadow: none
+
+#google_drive
+ background: $google-2
+ border-bottom: solid 2px darken($google-2, 20)
+ box-shadow: 0px -2px 0px darken($google-2, 20) inset
+ &:active
+  box-shadow: none
