--- a/tools.jade
+++ b/tools.jade
@@ -52,6 +52,8 @@ html
    +linkbtn("dumpert", "http://www.dumpert.nl/", "smile-o")
    +linkbtn("github", "https://github.com/", "github")
    +linkbtn("transip", "https://www.transip.nl/cp/", "server")
+   +linkbtn("travian_kingdoms", "http://ks4-nl.travian.com", "shield")
+   +linkbtn("google_drive", "https://drive.google.com/drive/u/0/my-drive", "google")
    
   section
    h1 Avans
@@ -60,6 +62,8 @@ html
    +linkbtn("vervoer", "https://9292.nl/", "bus")
    +linkbtn("blackboard", "http://bb.avans.nl", "graduation-cap")
    +linkbtn("mail", "https://mail.google.com/mail/u/1/#inbox", "envelope")
+   +linkbtn("draw.io", "https://www.draw.io/", "pencil")
+   +linkbtn("duolingo", "https://www.duolingo.com/", "globe")
    
   section
    h1 Design
