--- a/style.css
+++ b/style.css
@@ -356,3 +356,43 @@ form button.searchbtn {
 #transip:active {
   box-shadow: none;
 }
+
+#travian_kingdoms {
+  background: #f1c40f;
+  border-bottom: solid 2px #927608;
+  box-shadow: 0px -2px 0px #927608 inset;
+}
+
+#travian_kingdoms:active {
+  box-shadow: none;
+}
+
+#drawio {
+  background: #f39c12;
+  border-bottom: solid 2px #976008;
+  box-shadow: 0px -2px 0px #976008 inset;
+}
+
+#drawio:active {
+  box-shadow: none;
+}
+
+#duolingo {
+  background: #3498db;
+  border-bottom: solid 2px #196090;
+  box-shadow: 0px -2px 0px #196090 inset;
+}
+
+#duolingo:active {
+  box-shadow: none;
+}
+
+#google_drive {
+  background: #34a853;
+  border-bottom: solid 2px #1c5a2d;
+  box-shadow: 0px -2px 0px #1c5a2d inset;
+}
+
+#google_drive:active {
+  box-shadow: none;
+}
