--- a/tools.jade
+++ b/tools.jade
@@ -62,7 +62,7 @@ html
    +linkbtn("vervoer", "https://9292.nl/", "bus")
    +linkbtn("blackboard", "http://bb.avans.nl", "graduation-cap")
    +linkbtn("mail", "https://mail.google.com/mail/u/1/#inbox", "envelope")
-   +linkbtn("draw.io", "https://www.draw.io/", "pencil")
+   +linkbtn("drawio", "https://www.draw.io/", "pencil")
    +linkbtn("duolingo", "https://www.duolingo.com/", "globe")
    
   section
