--- a/style.sass
+++ b/style.sass
@@ -286,7 +286,7 @@ form
  &:active
   box-shadow: none
 
-#vervoer, #mail, #blackboard, #osiris, #rooster
+#vervoer, #mail, #blackboard, #osiris, #rooster, #balsamiq
  background: $avans
  border-bottom: solid 2px darken($avans, 20)
  box-shadow: 0px -2px 0px darken($avans, 20) inset
