--- a/tools.jade
+++ b/tools.jade
@@ -64,6 +64,7 @@ html
    +linkbtn("mail", "https://mail.google.com/mail/u/1/#inbox", "envelope")
    +linkbtn("drawio", "https://www.draw.io/", "pencil")
    +linkbtn("duolingo", "https://www.duolingo.com/", "globe")
+   +linkbtn("balsamiq", "https://avans.mybalsamiq.com/", "file-o")
    
   section
    h1 Design
