--- a/style.css
+++ b/style.css
@@ -317,13 +317,13 @@ form button.searchbtn {
   box-shadow: none;
 }
 
-#vervoer, #mail, #blackboard, #osiris, #rooster {
+#vervoer, #mail, #blackboard, #osiris, #rooster, #balsamiq {
   background: #C6002A;
   border-bottom: solid 2px #600014;
   box-shadow: 0px -2px 0px #600014 inset;
 }
 
-#vervoer:active, #mail:active, #blackboard:active, #osiris:active, #rooster:active {
+#vervoer:active, #mail:active, #blackboard:active, #osiris:active, #rooster:active, #balsamiq:active {
   box-shadow: none;
 }
 
