--- a/style.sass
+++ b/style.sass
@@ -286,7 +286,7 @@ form
  &:active
   box-shadow: none
 
-#vervoer, #mail, #blackboard, #osiris, #rooster, #balsamiq
+#vervoer, #mail, #blackboard, #osiris, #rooster
  background: $avans
  border-bottom: solid 2px darken($avans, 20)
  box-shadow: 0px -2px 0px darken($avans, 20) inset
@@ -314,21 +314,21 @@ form
  &:active
   box-shadow: none
 
-#travian_kingdoms
- background: $sunflower
- border-bottom: solid 2px darken($sunflower, 20)
- box-shadow: 0px -2px 0px darken($sunflower, 20) inset
+#pocket
+ background: $alizarin
+ border-bottom: solid 2px darken($alizarin, 20)
+ box-shadow: 0px -2px 0px darken($alizarin, 20) inset
  &:active
   box-shadow: none
 
-#drawio
- background: $orange
- border-bottom: solid 2px darken($orange, 20)
- box-shadow: 0px -2px 0px darken($orange, 20) inset
+#coolors
+ background: $torquoise
+ border-bottom: solid 2px darken($torquoise, 20)
+ box-shadow: 0px -2px 0px darken($torquoise, 20) inset
  &:active
   box-shadow: none
 
-#duolingo
+#freedesignresources
  background: $peterriver
  border-bottom: solid 2px darken($peterriver, 20)
  box-shadow: 0px -2px 0px darken($peterriver, 20) inset
@@ -336,8 +336,8 @@ form
   box-shadow: none
 
 #google_drive
- background: $google-2
- border-bottom: solid 2px darken($google-2, 20)
- box-shadow: 0px -2px 0px darken($google-2, 20) inset
+ background: $google-4
+ border-bottom: solid 2px darken($google-4, 20)
+ box-shadow: 0px -2px 0px darken($google-4, 20) inset
  &:active
   box-shadow: none
