--- a/style.css
+++ b/style.css
@@ -317,13 +317,13 @@ form button.searchbtn {
   box-shadow: none;
 }
 
-#vervoer, #mail, #blackboard, #osiris, #rooster, #balsamiq {
+#vervoer, #mail, #blackboard, #osiris, #rooster {
   background: #C6002A;
   border-bottom: solid 2px #600014;
   box-shadow: 0px -2px 0px #600014 inset;
 }
 
-#vervoer:active, #mail:active, #blackboard:active, #osiris:active, #rooster:active, #balsamiq:active {
+#vervoer:active, #mail:active, #blackboard:active, #osiris:active, #rooster:active {
   box-shadow: none;
 }
 
@@ -357,40 +357,40 @@ form button.searchbtn {
   box-shadow: none;
 }
 
-#travian_kingdoms {
-  background: #f1c40f;
-  border-bottom: solid 2px #927608;
-  box-shadow: 0px -2px 0px #927608 inset;
+#pocket {
+  background: #e74c3c;
+  border-bottom: solid 2px #a82315;
+  box-shadow: 0px -2px 0px #a82315 inset;
 }
 
-#travian_kingdoms:active {
+#pocket:active {
   box-shadow: none;
 }
 
-#drawio {
-  background: #f39c12;
-  border-bottom: solid 2px #976008;
-  box-shadow: 0px -2px 0px #976008 inset;
+#coolors {
+  background: #1abc9c;
+  border-bottom: solid 2px #0e6252;
+  box-shadow: 0px -2px 0px #0e6252 inset;
 }
 
-#drawio:active {
+#coolors:active {
   box-shadow: none;
 }
 
-#duolingo {
+#freedesignresources {
   background: #3498db;
   border-bottom: solid 2px #196090;
   box-shadow: 0px -2px 0px #196090 inset;
 }
 
-#duolingo:active {
+#freedesignresources:active {
   box-shadow: none;
 }
 
 #google_drive {
-  background: #34a853;
-  border-bottom: solid 2px #1c5a2d;
-  box-shadow: 0px -2px 0px #1c5a2d inset;
+  background: #ea4335;
+  border-bottom: solid 2px #a81d11;
+  box-shadow: 0px -2px 0px #a81d11 inset;
 }
 
 #google_drive:active {
