--- a/tools.jade
+++ b/tools.jade
@@ -69,10 +69,11 @@ html
    +linkbtn("fontawesome", "http://fontawesome.io/icons", "fa")
    +linkbtn("the_stocks", "http://thestocks.im/", "times")
    +linkbtn("name_that_color", "http://chir.ag/projects/name-that-color/", "comment")
-   +linkbtn("brandcolors", "http://brandcolors.net/", "adjust")
+   +linkbtn("brandcolors", "http://brandcolors.net/", "id-card")
    +linkbtn("mediamilitia", "http://mediamilitia.com/", "archive")
    +linkbtn("coolors", "https://coolors.co/app", "paint-brush")
    +linkbtn("freedesignresources", "http://freedesignresources.net/", "archive")
+   +linkbtn("material_colors", "https://material.io/guidelines/style/color.html", "google")
 
   section
    h1 Tools
