--- a/style.sass
+++ b/style.sass
@@ -336,6 +336,13 @@ form
   box-shadow: none
 
 #google_drive
+ background: $google-2
+ border-bottom: solid 2px darken($google-2, 20)
+ box-shadow: 0px -2px 0px darken($google-2, 20) inset
+ &:active
+  box-shadow: none
+
+#material_colors
  background: $google-4
  border-bottom: solid 2px darken($google-4, 20)
  box-shadow: 0px -2px 0px darken($google-4, 20) inset
